<resources>
    <string name="app_name">Solat sunnah</string>
    <string name="sholat_syuruq">Sholat syuruq</string>
    <string name="tahiyyatul_masjid">Tahiyyatul Masjid</string>
    <string name="istikhoroh">Istikhoroh</string>
    <string name="dhuha">Dhuha</string>
    <string name="rawatib">Rawatib</string>
    <string name="witir">Witir</string>
    <string name="tahajjud">Tahajjud</string>
</resources>
